[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "testing-tox"
version = "0.0.0"
description = "Handy functions for testing tox plugins."
readme = "README.rst"
keywords = [ "tox",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/testing-tox"
"Issue Tracker" = "https://github.com/python-coincidence/testing-tox/issues"
"Source Code" = "https://github.com/python-coincidence/testing-tox"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "testing_tox"

[tool.importcheck]
always = [ "testing_tox",]

[tool.mypy]
python_version = "3.7"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
